#676 ItemProxy uses virtual instead of platfrom thread